# Energy-Data-pipeline

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  Untitled  docker-compose.yml  initial_db_ingestion.py  inspect_both_table.py  main.py  plant.json  prefect.yaml  pyproject.toml  readme.1md  test.ipynb
.claude/planner/: refactoring-analysis-ver2.md  refactoring-analysis.md  refactoring-checklist.md  test-results.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  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  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.pub
fetch_data/: __init__.py  aggregate_hourly.py  constants.py
fetch_data/common/: __init__.py  config.py  database.py  date_utils.py  db_utils.py  impute_missing.py  logger.py  utils.py
fetch_data/demand/: __init__.py  collect_demand.py  concat_demand.py  transfer_demand_1h.py
fetch_data/pv/: __init__.py  daily_pv_automation.py  database.py  nambu_backfill.py  nambu_bulk_sync.py  nambu_merge_pv_data.py  nambu_probe_date.py  namdong_collect_pv.py  namdong_merge_pv_data.py
notify/: __init__.py  slack_notifier.py
prefect_flows/: __init__.py  deploy.py  merge_to_all.py  nambu_pv_flow.py  namdong_wind_flow.py  notify_tasks.py  prefect_pipeline.py
pv_test/: Dockerfile  Dockerfile.grafana  README.md  docker-compose.yml  init_db.py  requirements.txt
scripts/: backup_pv_db.sh  init_wind_tables.py  restore_pv_db.sh  simple_backfill.py
tests/: test_refactoring.py
(+24 files in other folders)
