[tool.uv]
package = false

[project]
name = "weather-pipeline"
version = "0.2.0"
description = "Weather and Power Demand ETL Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.29.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "polars>=1.0.0",
    "prefect>=2.14.0,<3.0.0",
    "pyarrow>=15.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "tqdm>=4.67.1",
    "workalendar>=17.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
